ders işlemleri bitti create, delete, put, get endpointleri yazılıdı. swagger eklendi.
